Feat: criado alguns gets | fix: ajustes nos services(list()).